# migratus

./: .gitignore  Cargo.toml  README.md  justfile
docs/: USAGE.md
examples/: basic_migration.rs  test_runner.rs
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: batch.rs  complete.rs  customer_global_id.rs  enrich.rs  load.rs  migrate.rs  mod.rs  status.rs  update.rs  validate.rs
src/domain/: config.rs  customer_global_id.rs  migration_field.rs  mod.rs  records.rs  types.rs
src/domain/update/: field.rs  mod.rs  records.rs
src/machine/: builder.rs
src/operations/: api_client.rs  csv_reader.rs  csv_writer.rs  merger.rs  mod.rs  validator.rs
src/operations/api/: customer_global_id.rs  mod.rs  update.rs
src/states/: batch.rs  complete.rs  enrich.rs  merge.rs  migrate.rs  mod.rs  uninitialized.rs  validate.rs
src/utils/: hash.rs  intermediate.rs  mod.rs  state.rs
src/wasm/: bindings.rs
