[package]
name = "migratus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "migratus"
path = "src/main.rs"

[[bin]]
name = "updatus"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
indicatif = "0.17"
chrono = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"
lto = true
